crates/jarl-core/src/lints/expect_s3_class/snapshots/jarl_core__lints__expect_s3_class__tests__no_fix_with_comments.snap
---
source: crates/jarl-core/src/lints/expect_s3_class/mod.rs
expression: "get_fixed_text(vec![\"# leading comment\\nexpect_equal(class(x), 'data.frame')\",\n\"expect_equal(class(x),\\n # a comment \\n'data.frame')\",\n\"expect_equal(class(x), 'data.frame') # trailing comment\",],\n\"expect_s3_class\", None)"
---
OLD:
====
# leading comment
expect_equal(class(x), 'data.frame')
NEW:
====
# leading comment
expect_s3_class(x, 'data.frame')

OLD:
====
expect_equal(class(x),
 # a comment 
'data.frame')
NEW:
====
expect_equal(class(x),
 # a comment 
'data.frame')

OLD:
====
expect_equal(class(x), 'data.frame') # trailing comment
NEW:
====
expect_s3_class(x, 'data.frame') # trailing comment
